--- a/src/views/test.module.css
+++ b/src/views/test.module.css
@@ -78,15 +78,15 @@
     color: black;
 }
 .Subject{
-    width: 90%;
+    width: 80%;
     position: fixed;
     top: 50;
     left: 50;
-    margin: -138px 0 0 150px;
+    margin: -120px 0 0 0px;
     z-index: 10000;
-    font-size: 18px;
+    font-size: 14px;
     display: flex;
-    gap: 50%;
+    justify-content: space-between;
 }
 .SubmissionFormButton span{
     font-size: 24px;
@@ -115,7 +115,7 @@
     background-color: #0F67F5;
 }
 .RadioLabel{
-    width: 70%;
+    width: 100%;
     height: 95px;
     background-color: #E1E1E1;
     display: flex;
@@ -128,53 +128,18 @@
 .RadioLabel:hover{
     background-color: #aaa5a5;
 }
-@media screen and (max-width: 1100px) {
-    .Subject{
-        width: 70%;
-    }
-}
-@media screen and (max-width: 900px) {
-    .Subject{
-        width: 50%;
-        gap: 25%;
-        font-size: 16px;
-    }
-}
-@media screen and (max-width: 770px) {
-    .Subject{
-        width: 65%;
-        gap: 25%;
-        font-size: 16px;
-        margin: -160px 0 0 70px;
-    }
+.Loading{
+    text-align: center;
 }
 @media screen and (max-width: 600px) {
     .Subject{
-        width: 90%;
-        gap: 30%;
-        font-size: 14px;
-        margin: -145px 0 0 10px;
+        font-size: 12px;
+        margin-top: -110px;
     }
     .Question{
         font-size: 16px;
     }
     .RadioLabel{
         font-size: 14px;
-    }
-}
-@media screen and (max-width: 430px) {
-    .Subject{
-        width: 90%;
-        gap: 5%;
-        font-size: 14px;
-        margin: -145px 0 0 5px;
-    }
-}
-@media screen and (max-width: 320px) {
-    .Subject{
-        width: 90%;
-        gap: 5%;
-        font-size: 12px;
-        margin: -145px 0 0 5px;
     }
 }
